--- a/EgnyteTest/App.config
+++ b/EgnyteTest/App.config
@@ -1,14 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.12.0.0" newVersion="3.12.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+﻿<configuration>
+  <appSettings>
+    <add key="URL" value="https://qarecruitment.egnyte.com/fl/rCey0sCxMN"/>
+    <add key="DownloadFolder" value="C:\EgnyteTest\EgnyteTest\EgnyteTest\DownloadData"/>
+    <add key="DataFolder" value="C:\EgnyteTest\EgnyteTest\EgnyteTest\Data"/>
+    <add key="ExtractFolder" value="C:\EgnyteTest\EgnyteTemp"/>
+  </appSettings>
 </configuration>
