--- a/EgnyteTest/packages.config
+++ b/EgnyteTest/packages.config
@@ -2,10 +2,11 @@
 <packages>
   <package id="BoDi" version="1.4.1" targetFramework="net461" />
   <package id="Cucumber.Messages" version="6.0.1" targetFramework="net461" />
+  <package id="Dapper" version="2.0.30" targetFramework="net461" />
   <package id="Gherkin" version="6.0.0" targetFramework="net461" />
   <package id="Google.Protobuf" version="3.7.0" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
-  <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
+  <package id="NUnit3TestAdapter" version="3.12.0" targetFramework="net461" developmentDependency="true" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="SpecFlow" version="3.1.82" targetFramework="net461" />
