--- a/EgnyteTest/App.config
+++ b/EgnyteTest/App.config
@@ -1,8 +1,21 @@
-﻿<configuration>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<configuration>
   <appSettings>
-    <add key="URL" value="https://qarecruitment.egnyte.com/fl/rCey0sCxMN"/>
-    <add key="DownloadFolder" value="C:\EgnyteTest\EgnyteTest\EgnyteTest\DownloadData"/>
-    <add key="DataFolder" value="C:\EgnyteTest\EgnyteTest\EgnyteTest\Data"/>
-    <add key="ExtractFolder" value="C:\EgnyteTest\EgnyteTemp"/>
+    <add key="URL" value="https://qarecruitment.egnyte.com/fl/rCey0sCxMN" />
+    <add key="DownloadFolder" value="C:\EgnyteTest\EgnyteTest\EgnyteTest\DownloadData" />
+    <add key="DataFolder" value="C:\EgnyteTest\EgnyteTest\EgnyteTest\Data" />
+    <add key="ExtractFolder" value="C:\EgnyteTest\EgnyteTemp" />
   </appSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.InteropServices.RuntimeInformation" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
